# from_blank_to_project

./: SOME_HINTS.md
part_1/: README.md
part_2/: README.md  main.cpp
part_3/: README.md
part_4/: README.md
part_5/: README.md
part_6/: CMakeLists.txt  README.md  main.cpp
sample/sample_1/: CMakeLists.txt  README.md  main.cpp  run_all.sh  someFunc.cpp  someFunc.h
sample/sample_2/: CMakeLists.txt  README.md  main.cpp  run_all.sh
sample/sample_2/libs/: justPrint.h
